feat: implement fleet trip confirmation alerts with twilio